--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ img {
   cursor: pointer;
   border: none;
   border-radius: 4px;
-  color: width;
+  color: white;
   width: 40px;
   height: 40px;
   background: #fb5 url('../img/arrow.svg') center center no-repeat;
